--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.4.1",
     "yup": "^1.0.2"
   }
 }
