--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^4.15.0",
     "codehooks-crudlify": "^1.0.8",
     "codehooks-js": "^1.0.10",
+    "jwt-decode": "^3.1.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
     "react-textarea-autosize": "^8.4.1",
     "yup": "^1.0.2"
   }
